--- a/index.html
+++ b/index.html
@@ -150,13 +150,17 @@
 
         .lineW{
             width:100%;
-            height:1px;
+            height: 2px;
             background: #000;
         }
         .line{
             width:100%;
-            height:1px;
-            background: #c3c3c3;
+            height: 1px;
+            background: #000;
+        }
+        .remark{
+            line-height:30px;
+            color:#2b2b2b;
         }
         .btn{
             width:200px;
@@ -257,6 +261,8 @@
             </p>
 
         </div>
+        <div class="line"></div>
+        <div class="remark">备注：测试测试测试测试测试测试</div>
         <div class="lineW"></div>
     </div>
     <div class="pd-box">
@@ -357,7 +363,7 @@ function btnDownloadPageBypfd2(){ //参数是'#pdf_container' 或 '.pdf_containe
     });
     $('#'+pdfContainer).removeClass('pdf');
 }
-btnDownloadPageBypfd2()
+//btnDownloadPageBypfd2()
 </script>
 </body>
 </html>
