--- a/web.html
+++ b/web.html
@@ -9,6 +9,7 @@
     <style>
         body{
             height:100%;
+            width:1080px;
             min-height: calc(100vh);
             background: white;
 
@@ -17,11 +18,11 @@
             margin: 0;
             padding: 0;
         }
-        .main-box{
-            width:calc(80vw);
-            min-width:1080px;
-            margin:0 auto;
-        }
+        /*.main-box{*/
+            /*width:calc(80vw);*/
+            /*min-width:1080px;*/
+            /*margin:0 auto;*/
+        /*}*/
         .wrapper-box {
             padding:0 30px;
             box-sizing: border-box;
@@ -205,6 +206,45 @@
             line-height:24px;
             margin-bottom:30px;
         }
+        .online{
+            display: block;
+        }
+        .online.active{
+            display: none;
+        }
+        .offline{
+            display: none;
+            margin-bottom:20px;
+            padding:10px 30px;
+            box-sizing: border-box;
+        }
+        .offline .yellow{
+            font-size:18px;
+        }
+        .offline p{
+            line-height:30px;
+        }
+        .offline.active{
+            display: block;
+        }
+        .offline input {
+            width:100%;
+            padding-left:10px;
+            line-height:36px;
+            box-sizing: border-box;
+            margin-bottom:20px;
+        }
+        .offline .btn-box{
+            height:50px;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+        }
+        .offline .btn-box .btn{
+            width:180px;
+            margin:0;
+            margin-left:30px;
+        }
     </style>
 </head>
 <body>
@@ -212,14 +252,25 @@
 <div class="main-box">
     <div class="wrapper-top">
         <div class="page-title">账单支付</div>
-        <div class="right-text">账单金额：<span class="yellow">￥123456</span></div>
-        <div class="qrcode">
-            <div class="img-box">
-                <img src="./code.png" alt="">
-                <a class="yellow">切换为线下支付</a>
+        <div class="online">
+            <div class="right-text">账单金额：<span class="yellow">￥123456</span></div>
+            <div class="qrcode">
+                <div class="img-box">
+                    <img src="./code.png" alt="">
+                    <a class="yellow changePayment">切换为线下支付</a>
+                </div>
+                <div class="desc">
+                    请使用拉卡拉POS机的“爱照护收款”功能扫描此二维码，<br> 然后刷客户的银行卡收取本订单服务费用。
+                </div>
             </div>
-            <div class="desc">
-                请使用拉卡拉POS机的“爱照护收款”功能扫描此二维码，<br> 然后刷客户的银行卡收取本订单服务费用。
+        </div>
+        <div class="offline">
+            <div class="yellow">订单金额：123元</div>
+            <p>交易备注</p>
+            <input type="text" class="offline-input" placeholder="请填写备注">
+            <div class="btn-box">
+                <div class="btn changeOnline">切换线上方式支付</div>
+                <div class="btn submitBtn">提交财务确认</div>
             </div>
         </div>
         <div class="waring-box">
@@ -229,7 +280,7 @@
             2. 如果客户没有支付宝也不能提供银行卡，只能通过转账、汇款等途径支付的，请更换为线下汇款方式继续支付。
         </div>
     </div>
-    <div class="wrapper-box" >
+    <div class="wrapper-box"  id="pdfContainer" >
         <div class="tab-box tt">
             <div class="back">
                 <div class="left-title">账单基本信息</div>
@@ -253,6 +304,71 @@
                 <div class="line"></div>
                 <ul class="desc-list">
                     <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
+                        <span>预缴款</span>
+                        <span>25</span>
+                        <span>-</span>
+                        <span>￥123456</span>
+                    </li> <li>
                         <span>预缴款</span>
                         <span>25</span>
                         <span>-</span>
@@ -346,10 +462,100 @@
         </div>
     </div>
 
-    <div class="btn">打印</div>
+    <div class="btn printBtn" >打印</div>
 </div>
 
 
+<script src="./jquery.js"></script>
+<script src="./jspdf.debug.js"></script>
+<script>
+    $(function () {
+        //切换为线下支付
+        $('.changePayment').on('click',function(){
+            $('.online').addClass('active')
+            $('.offline').addClass('active')
+        })
+        //切换为线上支付
+        $('.changeOnline').on('click',function(){
+            $('.online').removeClass('active')
+            $('.offline').removeClass('active')
+        })
 
+        //财务确认
+        $('.submitBtn').on('click',function(){
+            //获取input框值
+            var remark=$('.offline-input').val();
+
+        })
+        //打印
+        $('.printBtn').on('click',function(){
+            window.scrollTo(0,$('.wrapper-top').height());
+            btnDownloadPageBypfd2()
+        })
+        //比较清晰的方法
+        function btnDownloadPageBypfd2(){ //参数是'#pdf_container' 或 '.pdf_container',注意带前缀
+            var pdfContainer="pdfContainer";
+            $("#pdfContainer").addClass('pdf'); //pdf的css在下一个代码中,作用是使得打印的内容能在pdf中完全显示
+            var cntElem = document.getElementById(pdfContainer);
+            var shareContent = cntElem; //需要截图的包裹的（原生的）DOM 对象
+            var width = shareContent.offsetWidth; //获取dom 宽度
+            var height = shareContent.offsetHeight; //获取dom 高度
+            var canvas = document.createElement("canvas"); //创建一个canvas节点
+            var scale = 2; //定义任意放大倍数 支持小数
+            canvas.width = width * scale; //定义canvas 宽度 * 缩放，在此我是把canvas放大了2倍
+            canvas.height = height * scale; //定义canvas高度 *缩放
+            canvas.getContext("2d").scale(scale, scale); //获取context,设置scale
+            html2canvas(document.getElementById(pdfContainer), {
+                allowTaint: true,
+                taintTest: true,
+                canvas: canvas,
+                onrendered: function(canvas) {
+                    var context = canvas.getContext('2d');
+                    // 【重要】关闭抗锯齿
+                    context.mozImageSmoothingEnabled = false;
+                    context.webkitImageSmoothingEnabled = false;
+                    context.msImageSmoothingEnabled = false;
+                    context.imageSmoothingEnabled = false;
+                    var imgData = canvas.toDataURL('image/jpeg',1.0);//转化成base64格式,可上网了解此格式
+                    var img = new Image();
+                    img.src = imgData;
+                    img.onload = function() {
+                        img.width = img.width/2;   //因为在上面放大了2倍，生成image之后要/2
+                        img.height = img.height/2;
+                        img.style.transform="scale(0.5)";
+                        /****分页******/
+                        var position = $(document).scrollTop()-$('.wrapper-top').height();//页面偏移
+                        var pageHeight = 841.89;//一页高度
+                        var leftHeight = height * 0.75;//未打印内容高度
+//                        var imgWidth = width;
+//                        var imgHeight =   height;
+                        var doc = new jsPDF('p', 'pt', 'a4');
+                        if(pageHeight >= leftHeight){//不需要分页，页面高度>=未打印内容高度
+                            console.log("不需要分页");
+                            doc.addImage(imgData, 'jpeg', 30, position,  550 , 800 / canvas.width * canvas.height);
+                        }else{//需要分页
+                            console.log("需要分页");
+                            while(leftHeight>0){
+                                doc.addImage(imgData, 'JPEG', 30, position, 550 , 800 / canvas.width * canvas.height);
+                                leftHeight -= pageHeight;
+                                position -= 841.89;
+                                //避免添加空白页
+                                if(leftHeight > 0){
+                                    console.log("添加空白页");
+                                    doc.addPage();
+                                }
+                            }
+                        }
+                        doc.save('ceshi'+'.pdf');//保存为pdf文件
+
+                    }
+                },
+                background: "#fff", //一般把背景设置为白色，不然会出现图片外无内容的地方出现黑色，有时候还需要在CSS样式中设置div背景白色
+            });
+            $('#'+pdfContainer).removeClass('pdf');
+        }
+    })
+</script>
 </body>
+
 </html>
